--- a/ui/index.html
+++ b/ui/index.html
@@ -5,6 +5,7 @@
     <title>Fairy lights designer</title>
   </head>
   <body>
+    <canvas id="canvas" width="1000" height="1000"></canvas>
     <script src="./bootstrap.js"></script>
   </body>
 </html>
