blockly first draft

--- a/ui/index.html
+++ b/ui/index.html
@@ -5,7 +5,10 @@
     <title>Fairy lights designer</title>
   </head>
   <body>
-    <canvas id="canvas" width="1000" height="1000"></canvas>
-    <script src="./bootstrap.js"></script>
+    <div style="display:flex;">
+      <canvas id="canvas" width="1000" height="1000"></canvas>
+      <div id="blockly" style="flex:auto;"></div>
+    </div>
   </body>
+  <script src="./bootstrap.js"></script>
 </html>
