--- a/ui/index.html
+++ b/ui/index.html
@@ -11,6 +11,7 @@
         <div>
           <button id="load">Load</button>
           <button id="save">Save</button>
+          <button id="run">Run</button>
         </div>
         <div id="blockly" style="flex:auto;"></div>
       </div>
