--- a/ui/index.html
+++ b/ui/index.html
@@ -12,6 +12,7 @@
           <button id="load">Load</button>
           <button id="save">Save</button>
           <button id="run">Run</button>
+          <input id="bytecode" type="text" value="" readonly/>
         </div>
         <div id="blockly" style="flex:auto;"></div>
       </div>
