--- a/ui/index.html
+++ b/ui/index.html
@@ -14,11 +14,17 @@
         <canvas id="render" width="1000" height="1000"></canvas>
 
         <div id="controls">
-          <button id="load">Load</button>
-          <button id="save">Save</button>
           <button id="run">Run</button>
-
           <input id="bytecode" type="text" value="" readonly/>
+
+          <button id="new">New</button>
+          <button id="duplicate">Duplicate</button>
+          <button id="delete">Delete</button>
+
+          <select id="list" type="select">
+          </select>
+
+          <input id="name" type="text" value=""/>
         </div>
       </div>
 
